Overflow fix & Backend changes

--- a/frontend/scss/base/_base.scss
+++ b/frontend/scss/base/_base.scss
@@ -6,6 +6,6 @@ html, body {
 }
 
 body {
-  overflow-x: hidden !important;
-}
+  overflow-x: hidden;
 
+}
