--- a/frontend/scss/pages/Navbar.scss
+++ b/frontend/scss/pages/Navbar.scss
@@ -23,7 +23,6 @@
     &:hover {
       background-color: var(--secondary);
       transform: scale(1.1);
-      transition: background-color 0.3s ease;
       transition: transform 0.3s ease;
     }
   }
@@ -36,7 +35,6 @@
     font-size: 1.2em;
     transform: translateX(100%);
     transition: transform 0.3s ease;
-    overflow-y: hidden;
     
     &__buttons {
       width: 70%;
