--- a/frontend/scss/pages/Product.scss
+++ b/frontend/scss/pages/Product.scss
@@ -23,6 +23,8 @@
     & img {
       border-radius: 25px;
       height: 100%;
+      width: 100%;
+      object-fit: contain;
     }
   }
 
